# audio_app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
codes/: agregar_audio_a_json.py  collect_new_web_ready.py  descargar_whisper.py  metricas_correcciones.py  pipeline_audio.py  transcribir.py
review/: admin.py  models.py  urls.py  views.py
review/management/commands/: import_media.py
review/migrations/: 0001_initial.py
review/services/: versioning.py
review/templates/: base.html
review/templates/review/: pending_list.html  segment_edit.html
review_project/: settings.py  urls.py
templates/account/: signup.html
